--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 language: java
 script: mvn verify
+after_success: mvn deploy -Dmaven.test.skip=true --settings settings.xml
 jdk:
 - oraclejdk7
 env:
