SD-137 Sped up compilation disabling first step.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: false
 language: java
+install: true
 script: mvn verify
 after_success: mvn deploy -Dmaven.test.skip=true --settings settings.xml
 jdk:
