SD-138 Set build environment for Swager Parser (Maven central)

--- a/modules/swagger-parser/pom.xml
+++ b/modules/swagger-parser/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.swagger</groupId>
+        <groupId>com.theworkshop</groupId>
         <artifactId>swagger-parser-project</artifactId>
         <version>1.0.22-SNAPSHOT</version>
         <relativePath>../..</relativePath>
@@ -45,7 +45,7 @@
             <version>${swagger-core-version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
+            <groupId>io.swagger</groupId>
             <artifactId>swagger-core</artifactId>
             <version>${swagger-core-version}</version>
             <type>test-jar</type>
